adding css, favicon, and information

--- a/index.html
+++ b/index.html
@@ -1,8 +1,63 @@
-<html>
-	<head>
-		<title>Stephanie Cueto</title>
-	</head>
-	<body>
-		<h1>Hello World!</h1>
-	</body>
+<html class="no-js gr__brendajin_com" lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Stephanie Cueto</title>
+    <meta name="description" content="Web Developer. Diversity and Inlcusion Advocate.">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+</head>
+
+<body data-gr-c-s-loaded="true">
+
+    <div id="about">
+
+        <div id="bio">
+
+            <!-- Add your site or application content here -->
+            <h1>Stephanie Cueto</h1>
+
+            <p>I'm a software engineer and advocate for women's empowerment and education. Slowly .</p>
+
+            <p>I'm passionate about sharing the professional, leadership, and communication tools to support women of all levels and professional backgrounds in their careers as Software Engineers. As a <strong>Advisory Board Member</strong> for <a href="http://www.girldevelopit.com"
+                    target="_blank">Girl Develop It</a>, I empower thousands of adult women with software skills every month by removing the barriers that keep women out of technology.</p>
+        </div>
+
+        <div id="social">
+            <!-- Twitter -->
+            <a href="https://twitter.com/SMCueto" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Twitter</a>
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>LinkedIn</a>
+            <!-- Github -->
+            <a href="https://github.com/smcueto" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i>Github</a>
+            <!-- Resume -->
+            <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>Resume</a>
+        </div>
+    </div>
+
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-28948993-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-28948993-1');
+    </script>
+    <!-- end Google Analytics -->
+
+</body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span>
+
 </html>
