--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <!-- Add your site or application content here -->
             <h1>Stephanie Cueto</h1>
 
-            <p>I'm a software engineer and advocate for women's empowerment and education. Slowly .</p>
+            <p>I'm a software engineer and advocate for women's empowerment and education. In 2015 I decided to become an engineer but had a lot of options on where to start. While trying to get involved into the tech industry as a Latinx woman, I have seen a high need for representation and access to resources, especially if you come from a low income background.  It has been an arduous for me to find a program that was willing to take a chance on me and train me to get my foot into the door. In the beginning of 2018 I got accepted into Techtonica to help me jump start my career as a software engineer. Techtonica is a six-month software engineering program for aspiring Bay Area womxn and non-binary adults. Techtonica has given me an amazing atmosphere to work alongside amazing womxn who are trying to break into the industry and become part of the community. Now going through the program, the feeling of struggling for three years to find a community that welcomed me and wanted me to succeed still resonates with me and I want to keep helping other womxn on their path into becoming and Engineer.</p>
 
-            <p>I'm passionate about sharing the professional, leadership, and communication tools to support women of all levels and professional backgrounds in their careers as Software Engineers. As a <strong>Advisory Board Member</strong> for <a href="http://www.girldevelopit.com"
-                    target="_blank">Girl Develop It</a>, I empower thousands of adult women with software skills every month by removing the barriers that keep women out of technology.</p>
+            <!-- <p>I'm passionate about sharing the professional, leadership, and communication tools to support women of all levels and professional backgrounds in their careers as Software Engineers. As a <strong>Advisory Board Member</strong> for <a href="http://www.devmission.org"
+                    target="_blank">dev/Mission</a>, I empower thousands of adult women with software skills every month by removing the barriers that keep women out of technology.</p> -->
         </div>
 
         <div id="social">
@@ -44,7 +44,7 @@
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <!-- <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-28948993-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -55,7 +55,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-28948993-1');
-    </script>
+    </script> -->
     <!-- end Google Analytics -->
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span>
