--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<html class="no-js gr__brendajin_com" lang="">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Stephanie Cueto</title>
-    <meta name="description" content="Web Developer. Diversity and Inlcusion Advocate.">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="icon.png">
+    <meta name="description" content="Web Developer. D & I Advocate.">
+    
     <!-- Place favicon.ico in the root directory -->
-
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
-<body data-gr-c-s-loaded="true">
+<body>
 
     <div id="about">
 
