--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-
+<!-- This website is built of Brenda Jin Personal Website http://brendajin.com/ -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Stephanie Cueto</title>
-    <meta name="description" content="Web Developer. D & I Advocate.">
+    <meta name="description" content="Web Developer. D and I Advocate.">
     
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
@@ -16,9 +16,7 @@
 <body>
 
     <div id="about">
-
         <div id="bio">
-
             <!-- Add your site or application content here -->
             <h1>Stephanie Cueto</h1>
 
