--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Stephanie Cueto</title>
     <meta name="description" content="Web Developer. D and I Advocate.">
-    
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/normalize.css">
@@ -28,7 +28,7 @@
 
         <div id="social">
             <!-- Twitter -->
-            <a href="https://twitter.com/SMCueto" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Twitter</a>
+            <a href="https://twitter.com/SMCueto" target="_blank"><i class=" " aria-hidden="true"></i>Twitter</a>
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>LinkedIn</a>
             <!-- Github -->
