--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <a href="https://github.com/smcueto" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i>Github</a>
             <!-- Resume -->
             <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>Resume</a>
+
+             <!-- BS -->
+             <a href="#" target="_blank"><i class="fas fa-angry" aria-hidden="true"></i>BS</a>
         </div>
     </div>
 
