adding twitter class for icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div id="social">
             <!-- Twitter -->
-            <a href="https://twitter.com/SMCueto" target="_blank"><i class=" " aria-hidden="true"></i>Twitter</a>
+            <a href="https://twitter.com/SMCueto" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>LinkedIn</a>
             <!-- Github -->
