adding linked in and github icons

--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
             <!-- Twitter -->
             <a href="https://twitter.com/SMCueto" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
             <!-- LinkedIn -->
-            <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>LinkedIn</a>
+            <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <!-- Github -->
-            <a href="https://github.com/smcueto" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i>Github</a>
+            <a href="https://github.com/smcueto" target="_blank"><i class="fab fa-github" aria-hidden="true"></i>Github</a>
             <!-- Resume -->
             <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>Resume</a>
-
-             <!-- BS -->
-             <a href="#" target="_blank"><i class="fas fa-angry" aria-hidden="true"></i>BS</a>
         </div>
     </div>
 
