adding resume icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Github -->
             <a href="https://github.com/smcueto" target="_blank"><i class="fab fa-github" aria-hidden="true"></i>Github</a>
             <!-- Resume -->
-            <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>Resume</a>
+            <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="far fa-file" aria-hidden="true"></i>Resume</a>
         </div>
     </div>
 
