updating about me and editing css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <div id="bio">
             <!-- Add your site or application content here -->
             <h1>Stephanie Cueto</h1>
-
-            <p>I'm a Latinx Software Engineer focused in Web Development. In 2015 I decided to become an engineer. In the beginning of 2018 I got accepted into Techtonica to help me jump start my career as a Software Engineer. Techtonica is a six-month Software Engineering program for aspiring Bay Area womxn and non-binary adults. Techtonica has given me an amazing atmosphere to work alongside amazing womxn who are trying to break into the industry and become part of the community. Now going through the program, the feeling of struggling for three years to find a community that welcomed me and wanted me to succeed still resonates with me and I want to keep helping other womxn on their path into becoming a Engineer.</p>
+            <p>I’m a Software Engineer and advocate for the Latinx & women community. I am involved in the Tech community since 2016. Playing with code at an early age and working in education, led to my interest in becoming a Software Engineer.
+            <br><br> 
+            I am an Advisory Board Member for <a href="http://devmission.org/" target="_blank"><strong>dev/Mission</strong></a>. I advocate for diversity & inclusion, input as a former student, woman of color, and former staff member. Also, I help in planning out logistics and fundraising efforts.
+            <br><br> 
+            As a Software Engineer Apprentice at <a href="https://techtonica.org/" target="_blank"><strong>Techtonica</strong></a>, I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program I created Salient Alert, a platform for reporting ICE Raids and Checkpoints. 
+            <br><br> 
+            Building a strong community in Tech was a hard path. The feeling of struggling for years to find a community that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other women and people of color start their path into becoming Software Engineers.</p>
         </div>
 
         <div id="social">
