--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-
+    <div class= "container">
+        <div id="pic"></div>
     <div id="about">
         <div id="bio">
             <!-- Add your site or application content here -->
@@ -47,7 +48,7 @@
             <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="far fa-file" aria-hidden="true"></i>Resume</a>
         </div>
     </div>
-
+</div>
     <script type="text/javascript">
        mixpanel.track("resume view");
     </script> 
