fixing images and css

--- a/index.html
+++ b/index.html
@@ -22,33 +22,51 @@
 </head>
 
 <body>
-    <div class= "container">
+    <div class="container">
         <div id="pic"></div>
-    <div id="about">
-        <div id="bio">
-            <!-- Add your site or application content here -->
-            <h1>Stephanie Cueto</h1>
-            <p>I’m a Software Engineer and advocate for the Latinx & women community. I am involved in the Tech community since 2016. Playing with code at an early age and working in education, led to my interest in becoming a Software Engineer.
-            <br><br> 
-            I am an Advisory Board Member for <a href="http://devmission.org/" target="_blank"><strong>dev/Mission</strong></a>. I advocate for diversity & inclusion, input as a former student, woman of color, and former staff member. Also, I help in planning out logistics and fundraising efforts.
-            <br><br> 
-            As a Software Engineer Apprentice at <a href="https://techtonica.org/" target="_blank"><strong>Techtonica</strong></a>, I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program I created Salient Alert, a platform for reporting ICE Raids and Checkpoints. 
-            <br><br> 
-            Building a strong community in Tech was a hard path. The feeling of struggling for years to find a community that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other women and people of color start their path into becoming Software Engineers.</p>
-        </div>
-
-        <div id="social">
-            <!-- Twitter -->
-            <a href="https://twitter.com/SMCueto" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
-            <!-- LinkedIn -->
-            <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <!-- Github -->
-            <a href="https://github.com/smcueto" target="_blank"><i class="fab fa-github" aria-hidden="true"></i>Github</a>
-            <!-- Resume -->
-            <a href="https://smcueto.github.io/stephaniecueto/" target="_blank"><i class="far fa-file" aria-hidden="true"></i>Resume</a>
+        <div id="about">
+            <div id="bio-container">
+                <div id='bio'>
+                <!-- Add your site or application content here -->
+                <h1>Stephanie Cueto</h1>
+                <p>I’m a Software Engineer and advocate for the Latinx & women community. I am involved in the Tech community since
+                    2016. Playing with code at an early age and working in education, led to my interest in becoming a Software
+                    Engineer.
+                    <br>
+                    <br> I am an Advisory Board Member for
+                    <a href="http://devmission.org/" target="_blank">
+                        <strong>dev/Mission</strong>
+                    </a>. I advocate for diversity & inclusion, input as a former student, woman of color, and former staff member.
+                    Also, I help in planning out logistics and fundraising efforts.
+                    <br>
+                    <br> As a Software Engineer Apprentice at
+                    <a href="https://techtonica.org/" target="_blank">
+                        <strong>Techtonica</strong>
+                    </a>, I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
+                    I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
+                    <br>
+                    <br> Building a strong community in Tech was a hard path. The feeling of struggling for years to find a community
+                    that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
+                    women and people of color start their path into becoming Software Engineers.</p>
+                    </div>
+            </div>
+    
+            <div id="social">
+                <!-- Twitter -->
+                <a href="https://twitter.com/SMCueto" target="_blank">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
+                <!-- LinkedIn -->
+                <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank">
+                    <i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
+                <!-- Github -->
+                <a href="https://github.com/smcueto" target="_blank">
+                    <i class="fab fa-github" aria-hidden="true"></i>Github</a>
+                <!-- Resume -->
+                <a href="https://smcueto.github.io/stephaniecueto/" target="_blank">
+                    <i class="far fa-file" aria-hidden="true"></i>Resume</a>
+            </div>
         </div>
     </div>
-</div>
     <script type="text/javascript">
        mixpanel.track("resume view");
     </script> 
