--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
                 <!-- Github -->
                 <a href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
-                <!-- Resume -->
+                <!-- PDF Resume -->
+                <a href="https://drive.google.com/file/d/1il9jjbWHozhOC-xQMNVN7OSeNEZTfShR/view?usp=sharing" target="_blank">
+                <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
+                <!-- Static Resume Website -->
                 <a href="https://smcueto.github.io/stephaniecueto/" target="_blank">
-                    <i class="far fa-file" aria-hidden="true"></i>Resume</a>
+                    <i class="far fa-file" aria-hidden="true"></i>Website Resume</a>
+
             </div>
         </div>
     </div>
