response image fix

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 <body>
     <div class="container">
-        <div id="pic"></div>
-
+            <div id="pic">
+                <img src="./img/stephaniecuetowebsite.png" alt="Stephanie Cueto">
+            </div>
         <div id="about">
             <div id="bio-container">
                 <div id='bio'>
