--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 <div id='bio'>
                 <!-- Add your site or application content here -->
                 <h1>Stephanie Cueto</h1>
-                <p>I’m a Software Engineer and advocate for the Latinx & women community. I am involved in the Tech community since
+                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since
                     2016. Playing with code at an early age and working in education, led to my interest in becoming a Software
                     Engineer.
                     <br>
-                    <br> I am an Advisory Board Member for
+                    <br> As an Advisory Board Member for
                     <a href="http://devmission.org/" target="_blank">
                         <strong>dev/Mission</strong>
-                    </a>. I advocate for diversity & inclusion, input as a former student, woman of color, and former staff member.
+                    </a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
                     Also, I help in planning out logistics and fundraising efforts.
                     <br>
                     <br> As a Software Engineer Apprentice at
@@ -47,9 +47,9 @@
                     </a>, I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
                     I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
                     <br>
-                    <br> Building a strong community in Tech was a hard path. The feeling of struggling for years to find a community
+                    <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
                     that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
-                    women and people of color start their path into becoming Software Engineers.</p>
+                    women and people of color start their path into becoming Software Engineers by being involved with the community.</p>
                 </div>
             </div>
     
