adding email option

--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
                     </a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
                     Also, I help in planning out logistics and fundraising efforts.
                     <br>
-                    <br> As a Software Engineer Apprentice at
+                    <br> Currently I am Software Engineer Apprentice at
                     <a href="https://techtonica.org/" target="_blank">
                         <strong>Techtonica</strong>
-                    </a>, I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
+                    </a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
                     I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
                     <br>
                     <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
                     that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
-                    women and people of color start their path into becoming Software Engineers by being involved with the community.</p>
+                    women and people of color start their path into becoming Software Engineers by being involved with the community.
+                    <br><br>
+                    Contact me at <a href="mailto:stephaniem.cueto@gmail.com" target="_top">stephaniem.cueto@gmail.com</a>
+                </p>
                 </div>
             </div>
     
@@ -68,7 +71,7 @@
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
                 <a href="https://smcueto.github.io/stephaniecueto/" target="_blank">
-                    <i class="far fa-file" aria-hidden="true"></i>Website Resume</a>
+                    <i class="far fa-file" aria-hidden="true"></i>Online CV</a>
 
             </div>
         </div>
