changing mixpanel description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <script type="text/javascript">
-       mixpanel.track("resume view");
+       mixpanel.track("personal website view");
     </script> 
 
 </body>
