--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Stephanie Cueto</title>
     <meta name="description" content="Web Developer. D and I Advocate.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="personal image" href="img/stephaniecuetowebsite.png" type="image/png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+
     <!-- start Mixpanel -->
     <script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
     0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
@@ -31,27 +33,25 @@
                 <div id='bio'>
                 <!-- Add your site or application content here -->
                 <h1>Stephanie Cueto</h1>
-                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since
-                    2016. Playing with code at an early age and working in education, led to my interest in becoming a Software
-                    Engineer.
-                    <br>
-                    <br> As an Advisory Board Member for
-                    <a href="http://devmission.org/" target="_blank">
-                        <strong>dev/Mission</strong>
-                    </a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
-                    Also, I help in planning out logistics and fundraising efforts.
-                    <br>
-                    <br> Currently I am Software Engineer Apprentice at
-                    <a href="https://techtonica.org/" target="_blank">
-                        <strong>Techtonica</strong>
-                    </a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
-                    I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
-                    <br>
-                    <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
-                    that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
-                    women and people of color start their path into becoming Software Engineers by being involved with the community.
-                    <br><br>
-                    Contact me at <a href="mailto:stephaniem.cueto@gmail.com" target="_top">stephaniem.cueto@gmail.com</a>
+                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since2016. Playing with code at an early age and working in education, led to my interest in becoming a Software Engineer.
+                <br>
+                <br> As an Advisory Board Member for
+                <a href="http://devmission.org/" target="_blank">
+                    <strong>dev/Mission</strong>
+                </a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
+                Also, I help in planning out logistics and fundraising efforts.
+                <br>
+                <br> Currently I am Software Engineer Apprentice at
+                <a href="https://techtonica.org/" target="_blank">
+                    <strong>Techtonica</strong>
+                </a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
+                I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
+                <br>
+                <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
+                that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
+                women and people of color start their path into becoming Software Engineers by being involved with the community.
+                <br><br>
+                Contact me at <a href="mailto:stephaniem.cueto@gmail.com" target="_top">stephaniem.cueto@gmail.com</a>
                 </p>
                 </div>
             </div>
@@ -78,7 +78,7 @@
     </div>
 
     <script type="text/javascript">
-       mixpanel.track("personal website view");
+       mixpanel.track("personal website");
     </script> 
 
 </body>
