--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id='bio'>
                 <!-- Add your site or application content here -->
                 <h1>Stephanie Cueto</h1>
-                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since2016. Playing with code at an early age and working in education, led to my interest in becoming a Software Engineer.
+                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since 2016. Playing with code at an early age and working in education led to my interest in becoming a Software Engineer.
                 <br>
                 <br> As an Advisory Board Member for
                 <a href="http://devmission.org/" target="_blank">
@@ -51,7 +51,6 @@
                 that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
                 women and people of color start their path into becoming Software Engineers by being involved with the community.
                 <br><br>
-                Contact me at <a href="mailto:stephaniem.cueto@gmail.com" target="_top">stephaniem.cueto@gmail.com</a>
                 </p>
                 </div>
             </div>
