spacing in info

--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
                 <br>
                 <br> As an Advisory Board Member for
                 <a href="http://devmission.org/" target="_blank">
-                    <strong>dev/Mission</strong>
-                </a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
+                    <strong>dev/Mission</strong></a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
                 Also, I help in planning out logistics and fundraising efforts.
                 <br>
                 <br> Currently I am Software Engineer Apprentice at
                 <a href="https://techtonica.org/" target="_blank">
-                    <strong>Techtonica</strong>
-                </a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
+                    <strong>Techtonica</strong></a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
                 I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
                 <br>
                 <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
