creating js fucntions for links in Mxpanel

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
     
             <div id="social">
                 <!-- Twitter -->
-                <a href="https://twitter.com/SMCueto" target="_blank">
+                <a id="twitterLink" href="https://twitter.com/SMCueto" target="_blank">
                     <i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
                 <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/in/stephaniecueto/" target="_blank">
+                <a id="linkedInLink" href="https://www.linkedin.com/in/stephaniecueto/" target="_blank">
                     <i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
                 <!-- Github -->
-                <a href="https://github.com/smcueto" target="_blank">
+                <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
                 <!-- PDF Resume -->
-                <a href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
+                <a id="PdfLink" href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
-                <a href="https://smcueto.github.io/stephaniecueto/" target="_blank">
+                <a id="onlineResumeLink" href="https://smcueto.github.io/stephaniecueto/" target="_blank">
                     <i class="far fa-file" aria-hidden="true"></i>Online CV</a>
 
             </div>
