adding mixpanel info

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
                 <!-- PDF Resume -->
-                <a id="PdfLink" href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
                 <a id="onlineResumeLink" href="https://smcueto.github.io/stephaniecueto/" target="_blank">
