changing script type for mixpanel

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- start Mixpanel -->
-    <script src="keys.js" type="text/javascript"></script>
+    <script src="keys.js" ></script>
     <script src="mixpanelLibrary.js" type="text/javascript"></script>
     <!-- end Mixpanel -->
 </head>
