--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- start Mixpanel -->
-    <script src="keys.js" ></script>
+    <script src="keys.js" type="text/javascript"></script>
     <script src="mixpanelLibrary.js" type="text/javascript"></script>
     <!-- end Mixpanel -->
 </head>
@@ -62,7 +62,7 @@
                 <a id="resumePdfLink" href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
-                <a id="onlineResumeLink" href="https://smcueto.github.io/stephaniecueto/" target="_blank">
+                <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
                     <i class="far fa-file" aria-hidden="true"></i>Online CV</a>
             </div>
         </div>
