updating LinkedIn and resume pdf links

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <a id="twitterLink" href="https://twitter.com/SMCueto" target="_blank">
                     <i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
                 <!-- LinkedIn -->
-                <a id="linkedInLink" href="https://www.linkedin.com/in/stephaniecueto/" target="_blank">
+                <a id="linkedInLink" href="https://www.linkedin.com/in/smcueto/" target="_blank">
                     <i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
                 <!-- Github -->
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
                 <!-- PDF Resume -->
-                <a id="resumePdfLink" href="https://drive.google.com/file/d/1JU478bqBoO-nvi7fhOoIcobrqzUMfxak/view?usp=sharing" target="_blank">
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/18HpPsFv44rL5nAaz4cH34enQ9trfrlS_/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
                 <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
