updating description and resume pdf link

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                 <h1>Stephanie Cueto</h1>
                 <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since 2016. Playing with code at an early age and working in education led to my interest in becoming a Software Engineer.
                 <br>
+                <br>Currently I am a Support Engineer and Colead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
                 <br> As an Advisory Board Member for
                 <a href="http://devmission.org/" target="_blank">
                     <strong>dev/Mission</strong></a>, I advocate for diversity & inclusion as a former student, woman of color, and former staff member.
                 Also, I help in planning out logistics and fundraising efforts.
                 <br>
-                <br> Currently I am Software Engineer Apprentice at
+                <br> Alumni Software Engineer Apprentice from
                 <a href="https://techtonica.org/" target="_blank">
-                    <strong>Techtonica</strong></a>, where I have gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
+                    <strong>Techtonica</strong></a>, where I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
                 I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
                 <br>
                 <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
@@ -58,7 +59,7 @@
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
                 <!-- PDF Resume -->
-                <a id="resumePdfLink" href="https://drive.google.com/file/d/18HpPsFv44rL5nAaz4cH34enQ9trfrlS_/view?usp=sharing" target="_blank">
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/1VcI8WaFe9TX3OrXPCMgKogDc8QV0xFAy/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
                 <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
