--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
             <div id="pic">
-                <img src="./img/stephaniecuetowebsite.png" alt="Stephanie Cueto">
+                <img src="./img/headshotcircle.PNG" alt="Stephanie Cueto">
             </div>
         <div id="about">
             <div id="bio-container">
@@ -60,7 +60,7 @@
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i>Github</a>
                 <!-- PDF Resume -->
-                <a id="resumePdfLink" href="https://drive.google.com/file/d/1VcI8WaFe9TX3OrXPCMgKogDc8QV0xFAy/view?usp=sharing" target="_blank">
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/1eXQFCVoiXCfULRxFs2od0HYmA3Mi4wSf/view?usp=sharing" target="_blank">
                 <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
                 <!-- Static Resume Website -->
                 <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
