--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Stephanie Cueto</h1>
                 <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since 2016. Playing with code at an early age and working in education led to my interest in becoming a Software Engineer.
                 <br>
-                <br>Currently I am a Support Engineer and Colead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
+                <br>I am a Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
                 <br>
                 <br> Alumni Software Engineer Apprentice from
                 <a href="https://techtonica.org/" target="_blank">
