adding content and favicon update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Stephanie Cueto</title>
-    <meta name="description" content="Web Developer. D and I Advocate.">
+    <meta name="description" content="Stephnaie's personal website. Come get to know this awesome Web Developer!">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <!-- Place favicon.ico in the root directory -->
@@ -27,23 +27,22 @@
                 <div id='bio'>
                 <!-- Add your site or application content here -->
                 <h1>Stephanie Cueto</h1>
-                <p>I’m a Software Engineer and advocate for the Latinx & women community. I have been involved in the Tech community since 2016. Playing with code at an early age and working in education led to my interest in becoming a Software Engineer.
+                <h2>Web Developer | Support Engineer | Technical Community Moderator</h2>
+                <p> Playing with code at an early age and working in the Education Non-profit Sector led to my interest in becoming a Web Developer in 2016.
                 <br>
-                <br>I am a Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
+                <br>Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
                 <br>
                 <br> Alumni Software Engineer Apprentice from
                 <a href="https://techtonica.org/" target="_blank">
                     <strong>Techtonica</strong></a>, where I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
-                I created Salient Alert, a platform for reporting ICE Raids and Checkpoints.
+                I created <a href="http://salientalert.com" target="_blank">Salient Alert</a>, a platform for reporting ICE Raids and Checkpoints. Please feel free to make a <a href="https://github.com/smcueto/salientAlert" target="_blank"> pull request here</a> for improvements.
                 <br>
-                <br> Building a strong community in Tech was a hard path, and the feeling of struggling for years to find a community
-                that welcomed me as a non-traditional Latinx woman still resonates with me. I want to keep helping other
-                women and people of color start their path into becoming Software Engineers by being involved with the community.
+                <br> In my downtime I like to organize my home (love maximizing space), talking or listening to podcasts relating to psychology (Savvy Psychologist anyone?), working on coding projects (swift is pretty cool!), or travel to different cities!
                 <br><br>
                 </p>
                 </div>
             </div>
-    
+
             <div id="social">
                 <!-- Twitter -->
                 <a id="twitterLink" href="https://twitter.com/SMCueto" target="_blank">
@@ -62,7 +61,7 @@
                     <i class="far fa-file" aria-hidden="true"></i>Online CV</a>
             </div>
         </div>
-    </div> 
-    <script> mixpanel.track("Viewed Personal Website");</script>   
+    </div>
+    <script> mixpanel.track("Viewed Personal Website");</script>
 </body>
 </html>
