adding meta info

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Stephanie Cueto</title>
-    <meta name="description" content="Stephnaie's personal website. Come get to know this awesome Web Developer!">
+    <title>Stephanie M. Cueto</title>
+    <meta name="description" content="Stephnaie's personal website. Come get to know this awesome Latinx Web Developer!">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <!-- Place favicon.ico in the root directory -->
