--- a/index.html
+++ b/index.html
@@ -30,35 +30,39 @@
                 <h2>Web Developer | Support Engineer | Technical Community Moderator</h2>
                 <p> Playing with code at an early age and working in the Education Non-profit Sector led to my interest in becoming a Web Developer in 2016.
                 <br>
-                <br>Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank">Mixpanel</a>.
+                <br>Former Technical Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank"><strong>Mixpanel</strong></a>.
                 <br>
                 <br> Alumni Software Engineer Apprentice from
                 <a href="https://techtonica.org/" target="_blank">
                     <strong>Techtonica</strong></a>, where I gained the skills to build projects in MongoDb, MySQL, Express.js, React, Node.js. During the program
-                I created <a href="http://salientalert.com" target="_blank">Salient Alert</a>, a platform for reporting ICE Raids and Checkpoints. Please feel free to make a <a href="https://github.com/smcueto/salientAlert" target="_blank"> pull request here</a> for improvements.
+                I created <a href="http://salientalert.com" target="_blank">Salient Alert</a>, a platform for reporting ICE Raids and Checkpoints. Please feel free to make a <a href="https://github.com/smcueto/salientAlert" target="_blank"> pull request here</a>.
                 <br>
                 <br> In my downtime I like to organize my home (love maximizing space), talking or listening to podcasts relating to psychology (Savvy Psychologist anyone?), working on coding projects (swift is pretty cool!), or travel to different cities!
                 <br><br>
+                Actively looking for new apportunities. Want to get in touch? Send me an email or reach out through social!
                 </p>
                 </div>
             </div>
 
             <div id="social">
+              <!-- email -->
+              <a id="emailink" href="mailto:stephaniem.cueto@gmail.com" target="_blank">
+                  <i class="far fa-envelope" aria-hidden="true"></i>Email</a>
                 <!-- Twitter -->
                 <a id="twitterLink" href="https://twitter.com/SMCueto" target="_blank">
-                    <i class="fab fa-twitter" aria-hidden="true"></i>Twitter</a>
+                    <i class="fab fa-twitter" aria-hidden="true"></i></a>
                 <!-- LinkedIn -->
                 <a id="linkedInLink" href="https://www.linkedin.com/in/smcueto/" target="_blank">
-                    <i class="fab fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
+                    <i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
                 <!-- Github -->
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
-                    <i class="fab fa-github" aria-hidden="true"></i>Github</a>
+                    <i class="fab fa-github" aria-hidden="true"></i></a>
                 <!-- PDF Resume -->
                 <a id="resumePdfLink" href="https://drive.google.com/file/d/1OZc-E4Kb2koXb8GHp29YGgIkWGaKY1yJ/view?usp=sharing" target="_blank">
-                <i class="far fa-file" aria-hidden="true"></i>PDF Resume</a>
+                <i class="far fa-file-pdf-o" aria-hidden="true"></i> Resume</a>
                 <!-- Static Resume Website -->
                 <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
-                    <i class="far fa-file" aria-hidden="true"></i>Online CV</a>
+                    <i class="far fa-file" aria-hidden="true"></i>Coded Online Resume</a>
             </div>
         </div>
     </div>
