Update Resume Link and Taking out Coded Resume

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i></a>
                 <!-- PDF Resume -->
-                <a id="resumePdfLink" href="https://drive.google.com/file/d/1OZc-E4Kb2koXb8GHp29YGgIkWGaKY1yJ/view?usp=sharing" target="_blank">
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/1ATZEUqVZFPHcbUOMiHlz3_4faGul_Usg/view?usp=sharing" target="_blank">
                 <i class="far fa-file-pdf-o" aria-hidden="true"></i> Resume</a>
-                <!-- Static Resume Website -->
-                <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
-                    <i class="far fa-file" aria-hidden="true"></i>Coded Online Resume</a>
+                <!-- Static Resume Website NEED TO RECODE -->
+                <!-- <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
+                    <i class="far fa-file" aria-hidden="true"></i>Coded Online Resume</a>  -->
             </div>
         </div>
     </div>
