--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <h2>Web Developer | Support Engineer | Technical Community Moderator</h2>
                 <p> Playing with code at an early age and working in the Education Non-profit Sector led to my interest in becoming a Web Developer in 2016.
                 <br>
-                <br>Former Technical Community Moderator, IDE Representative, and Lead for Employee Resource Group Mezcla at <a href="https://www.mixpanel.com" target="_blank"><strong>Mixpanel</strong></a>.
+                <br>Currently at <a href="" target="_blank"><strong>Gong.io</strong></a> as a Technical Support Engineer.
+                <br>
+                <br>Former Technical Community Moderator, IDE Representative, and Mezcla ERG(Employee Resource Group)Lead at <a href="https://www.mixpanel.com" target="_blank"><strong>Mixpanel</strong></a>.
                 <br>
                 <br> Alumni Software Engineer Apprentice from
                 <a href="https://techtonica.org/" target="_blank">
@@ -39,7 +41,7 @@
                 <br>
                 <br> In my downtime I like to organize my home (love maximizing space), talking or listening to podcasts relating to psychology (Savvy Psychologist anyone?), working on coding projects (swift is pretty cool!), or travel to different cities!
                 <br><br>
-                Actively looking for new apportunities. Want to get in touch? Send me an email or reach out through social!
+                Want to get in touch? Send me an email or reach out through social!
                 </p>
                 </div>
             </div>
