--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Web Developer | Support Engineer | Technical Community Moderator</h2>
                 <p> Playing with code at an early age and working in the Education Non-profit Sector led to my interest in becoming a Web Developer in 2016.
                 <br>
-                <br>Currently at <a href="" target="_blank"><strong>Gong.io</strong></a> as a Technical Support Engineer.
+                <br>Currently at <a href="http://www.gong.io/" target="_blank"><strong>Gong.io</strong></a> as a Technical Support Engineer.
                 <br>
                 <br>Former Technical Community Moderator, IDE Representative, and Mezcla ERG(Employee Resource Group)Lead at <a href="https://www.mixpanel.com" target="_blank"><strong>Mixpanel</strong></a>.
                 <br>
