--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id='bio'>
                 <!-- Add your site or application content here -->
                 <h1>Stephanie Cueto</h1>
-                <h2>Web Developer | Support Engineer | Technical Community Moderator</h2>
+                <h2>Web Developer | Support Engineer </h2>
                 <p> Playing with code at an early age and working in the Education Non-profit Sector led to my interest in becoming a Web Developer in 2016.
                 <br>
                 <br>Currently at <a href="http://www.gong.io/" target="_blank"><strong>Gong.io</strong></a> as a Technical Support Engineer.
